@@ -160,7 +160,7 @@ bool CAppConfig::DoDataExchange(bool bLoad)
 #ifdef USE_PROXY
 		_CFG_INT ( "ProxyType", m_DefaultSite.m_ProxyType )
 		_CFG_STR ( "ProxyAddr", m_DefaultSite.m_ProxyAddr )
-		_CFG_INT ( "ProxyPort", m_DefaultSite.m_ProxyPort )
+		_CFG_STR ( "ProxyPort", m_DefaultSite.m_ProxyPort )
 		_CFG_STR ( "ProxyUser", m_DefaultSite.m_ProxyUser )
 		_CFG_STR ( "ProxyPass", m_DefaultSite.m_ProxyPass )
 #endif
@@ -297,7 +297,7 @@ void CAppConfig::LoadFavorites()
 			else if ( 0 == strcmp( pname, "ProxyAddr" ) )
 				pSite->m_ProxyAddr = pval;
 			else if ( 0 == strcmp( pname, "ProxyPort" ) )
-				pSite->m_ProxyPort = atoi(pval);
+				pSite->m_ProxyPort = pval;
 			else if ( 0 == strcmp( pname, "ProxyUser" ) )
 				pSite->m_ProxyUser = pval;
 			else if ( 0 == strcmp( pname, "ProxyPass" ) )
